# albert

./: .gitmodules
firefoxbookmarks/src/: extension.cpp
plugins/virtualbox/: CMakeLists.txt
plugins/virtualbox/src/: extension.cpp
src/application/: CMakeLists.txt  albertapp.cpp
src/application/pluginsystem/: extensionmanager.cpp  query.cpp  query.h  query_p.hpp
src/application/src/: main.cpp  trackbert.cpp  trackbert.h
src/lib/: CMakeLists.txt
src/lib/albert/: CMakeLists.txt
src/lib/albert/src/pluginsystem/: extensionmanager.cpp
src/lib/autoconf/: CMakeLists.txt  autoconf.cpp  autoconf.h  listener.hpp
src/lib/introspect/: CMakeLists.txt
src/lib/introspect/include/: introspect.h
src/lib/introspect/src/: introspect.cpp
src/lib/trackbert/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/cmdline/: CMakeLists.txt  cmdline.qrc  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  item.cpp  item.h  metadata.json
src/plugins/files/: CMakeLists.txt  extension.cpp  extension.h
src/plugins/files/src/: main.cpp
src/plugins/issuecreator/: CMakeLists.txt  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  metadata.json
src/plugins/pass/: CMakeLists.txt  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  item.cpp  item.h  metadata.json
src/plugins/remmina/: CMakeLists.txt  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  item.cpp  item.h  metadata.json
src/plugins/ssh/: CMakeLists.txt  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  item.cpp  item.h  metadata.json
src/plugins/system/: CMakeLists.txt  extension.cpp  extension.h
src/plugins/virtualbox/sdk/bindings/c/glue/: VBoxCAPIGlue.c
src/plugins/virtualbox/sdk/bindings/mscom/include/: VirtualBox.h
src/plugins/virtualbox/sdk/bindings/mscom/lib/: VirtualBox.tlb  VirtualBox_i.c
